--- a/src/components/stylesheet/styles.css
+++ b/src/components/stylesheet/styles.css
@@ -1,9 +1,9 @@
-
-.feature-form{
+.feature-form {
     width: 500px;
     height: 90px;
 }
-.form-i::placeholder{
+
+.form-i::placeholder {
     font-weight: 500;
 }
 
@@ -11,12 +11,75 @@
     font-family: 'Poppins', sans-serif;
     line-height: 60px !important;
 }
-@media screen and (max-width: 599px){
-    .banner_text{
+
+@media screen and (max-width: 599px) {
+    .banner_text {
         line-height: 40px !important;
         width: 300px;
     }
-    .feature-form{
+    .feature-form {
         width: 100%;
     }
+}
+
+/* Hamburger Menu */
+
+.hamburger {
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    transition: all 0.25s;
+    position: relative;
+}
+
+.hamburger-top, .hamburger-middle, .hamburger-bottom{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 24px;
+    height: 2px;
+    background: #000;
+    transition: all 0.25s;
+}
+.hamburger-middle{
+    transform: translateY(7px);
+}
+.hamburger-bottom{
+    transform: translateY(14px);
+}
+
+.open{
+    transform: rotate(90deg);
+    transform: translateY(0px)
+}
+
+.open .hamburger-top{
+    transform: rotate(45deg) translateY(6px) translate(6px)
+}
+.open .hamburger-middle{
+    display: none;
+}
+.open .hamburger-bottom{
+    transform: rotate(-45deg) translateY(6px) translate(-6px) 
+}
+.closed{
+    transform: rotate(0deg);
+}
+/* Login/Register PAge Styles */
+.login-side-1{
+    background: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,.5)), url('../signup_pages/images/loginbg.jpg');
+    background-size: cover;
+    background-position: 92% -95%;
+}
+.register-side-1{
+        background: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,.5)), url('../signup_pages/images/registerbg.jpg');
+        background-size: cover;
+        background-position: 92% -95%;
+}
+
+/*End Login/Register PAge Styles */
+
+.footer{
+    background: linear-gradient(to bottom, rgba(47,6,185,.2), rgba(0,0,0,.2)), url('../../assets/images/footer_bg.png');
+    /* height: 500px; */
 }
