--- a/src/components/stylesheet/styles.css
+++ b/src/components/stylesheet/styles.css
@@ -75,6 +75,7 @@
         background: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,.5)), url('../signup_pages/images/registerbg.jpg');
         background-size: cover;
         background-position: 92% -95%;
+        height: 100vh;
 }
 
 /*End Login/Register PAge Styles */
