--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.loader{
+     
+}
+/* @keyframes spin {
+    0%{
+        transform: rotate(0deg)
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+} */
+#pre-loader{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #efefef;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.dimiss-loader{
+    animation: dismiss 1s forwards;
+}
+
+@keyframes dismiss {
+    100%{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
