--- a/src/components/Admin/styles/styles.css
+++ b/src/components/Admin/styles/styles.css
@@ -13,3 +13,13 @@
 .border-dash{
     border: 2px blue dashed;
 }
+
+.card-input{
+    border: none;
+    border-bottom: 2px solid #333;
+    outline: none;
+    font-size: 13px;
+}
+.card-input:valid, .card-input:focus, .card-input:active{
+    outline: 1px solid #fff;
+}
