--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,16 @@
         visibility: hidden;
     }
 }
+
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 20ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open{
+    opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+    opacity: 0;
+}
